working on media queries, need to fix a few and add navbar collapsable

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,19 @@ p{
    
 }
 
+
+@media(max-width:900px){
+    .site-sidebar{
+        display: none;
+    }
+
+
+
+
+
+ 
+}
+
 .language-options{
     display: flex;
     margin: 5% 0;
@@ -155,6 +168,35 @@ p{
 }
 
 
+@media(max-width:900px){
+    .main-content{
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .intro h2{
+        font-size: 1rem;
+        text-align: center;
+        
+    }
+
+
+    
+#Skills, #Projects, #About{
+   
+    /* display: flex;
+   justify-content: center; */
+  
+   padding-top: 100%;
+  
+  
+     
+  }
+
+ 
+}
+
+
 /* Intro */
 
 .intro{
@@ -188,6 +230,19 @@ background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1) ), url('images
 .arrow{
     color: rgba(145,13,13,.8);
     /* scroll-behavior: smooth; */
+}
+
+
+@media(max-width:900px){
+
+        .arrow{
+            display: none;
+        }
+    
+
+
+
+ 
 }
 
 
@@ -242,6 +297,21 @@ background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1) ), url('images
   
 }
 
+
+
+@media(max-width:900px){
+    .site-sidebar{
+        display: none;
+    }
+
+    .nav-bar{
+        display: none;
+    }
+
+
+
+ 
+}
 
 
 
@@ -400,6 +470,40 @@ background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1) ), url('images
 .project-logo:hover{
 
 color:rgba(143, 8, 8, 0.6)
+}
+
+
+@media(max-width:900px){
+    .project{
+        width: 100%;
+        text-align: center;
+    }
+
+    .projects-container{
+        flex-direction: column;
+    }
+
+ 
+}
+
+
+
+@media(max-width:700px){
+    .project{
+        width: 100%;
+        text-align: center;
+    }
+
+    .projects-container{
+        flex-direction: column;
+    }
+
+    .project img{
+        width: 100%;
+        height: 150px;
+    }
+
+ 
 }
 
 
